--- a/mbsat-fsw-libero/synthesis/synlog/report/MSS_C0_compiler_runstatus.xml
+++ b/mbsat-fsw-libero/synthesis/synlog/report/MSS_C0_compiler_runstatus.xml
@@ -6,7 +6,7 @@ The file contains the job information from compiler to be displayed as part of t
 
 <job_run_status name="compiler"> 
   <report_link name="Detailed report">
-    <data>C:\Users\Files\MBSAT\working\ManitobaSat-Flight-Software\mbsat-fsw-libero\synthesis\synlog\MSS_C0_compiler.srr</data>
+    <data>C:\Users\Files\MBSAT\working\IrisSat-Flight-Software\mbsat-fsw-libero\synthesis\synlog\MSS_C0_compiler.srr</data>
     <title>Synopsys HDL Compiler</title>
   </report_link> 
   <job_status>
@@ -15,15 +15,15 @@ The file contains the job information from compiler to be displayed as part of t
 <job_info> 
 			<info name="Notes">
   <data>140</data>
-  <report_link name="more"><data>C:\Users\Files\MBSAT\working\ManitobaSat-Flight-Software\mbsat-fsw-libero\synthesis\synlog\report\MSS_C0_compiler_notes.txt</data></report_link>
+  <report_link name="more"><data>C:\Users\Files\MBSAT\working\IrisSat-Flight-Software\mbsat-fsw-libero\synthesis\synlog\report\MSS_C0_compiler_notes.txt</data></report_link>
   </info>
 			<info name="Warnings">
   <data>148</data>
-  <report_link name="more"><data>C:\Users\Files\MBSAT\working\ManitobaSat-Flight-Software\mbsat-fsw-libero\synthesis\synlog\report\MSS_C0_compiler_warnings.txt</data></report_link>
+  <report_link name="more"><data>C:\Users\Files\MBSAT\working\IrisSat-Flight-Software\mbsat-fsw-libero\synthesis\synlog\report\MSS_C0_compiler_warnings.txt</data></report_link>
   </info>
 			<info name="Errors">
   <data>0</data>
-  <report_link name="more"><data>C:\Users\Files\MBSAT\working\ManitobaSat-Flight-Software\mbsat-fsw-libero\synthesis\synlog\report\MSS_C0_compiler_errors.txt</data></report_link>
+  <report_link name="more"><data>C:\Users\Files\MBSAT\working\IrisSat-Flight-Software\mbsat-fsw-libero\synthesis\synlog\report\MSS_C0_compiler_errors.txt</data></report_link>
   </info>
 			<info name="CPU Time">
   <data>-</data>
