Replace mbsat with iris

--- a/mbsat-fsw-libero/synthesis/MSS_C0.vm
+++ b/mbsat-fsw-libero/synthesis/MSS_C0.vm
@@ -11,32 +11,32 @@
 // file 2 "\c:\microsemi\libero_soc_v12.1\synplifypro\lib\vlog\umr_capim.v "
 // file 3 "\c:\microsemi\libero_soc_v12.1\synplifypro\lib\vlog\scemi_objects.v "
 // file 4 "\c:\microsemi\libero_soc_v12.1\synplifypro\lib\vlog\scemi_pipes.svh "
-// file 5 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\actel\directcore\corespi\5.2.104\rtl\vlog\core\spi_clockmux.v "
-// file 6 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\actel\directcore\corespi\5.2.104\rtl\vlog\core\spi_chanctrl.v "
-// file 7 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\actel\directcore\corespi\5.2.104\rtl\vlog\core\spi_fifo.v "
-// file 8 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\actel\directcore\corespi\5.2.104\rtl\vlog\core\spi_rf.v "
-// file 9 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\actel\directcore\corespi\5.2.104\rtl\vlog\core\spi_control.v "
-// file 10 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\actel\directcore\corespi\5.2.104\rtl\vlog\core\spi.v "
-// file 11 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\actel\directcore\corespi\5.2.104\rtl\vlog\core\corespi.v "
-// file 12 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\work\corespi_c0\corespi_c0.v "
-// file 13 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\work\corespi_c1\corespi_c1.v "
-// file 14 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\actel\directcore\coreapb3\4.1.100\rtl\vlog\core\coreapb3_muxptob3.v "
-// file 15 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\actel\directcore\coreapb3\4.1.100\rtl\vlog\core\coreapb3_iaddr_reg.v "
-// file 16 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\actel\directcore\coreapb3\4.1.100\rtl\vlog\core\coreapb3.v "
-// file 17 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\work\coreapb3_c0\coreapb3_c0.v "
-// file 18 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\actel\directcore\coreresetp\7.1.100\rtl\vlog\core\coreresetp_pcie_hotreset.v "
-// file 19 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\actel\directcore\coreresetp\7.1.100\rtl\vlog\core\coreresetp.v "
-// file 20 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\work\coreresetp_c0\coreresetp_c0.v "
-// file 21 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\work\fccc_c0\fccc_c0_0\fccc_c0_fccc_c0_0_fccc.v "
-// file 22 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\work\fccc_c0\fccc_c0.v "
-// file 23 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\work\mss_c0_mss\mss_c0_mss_syn.v "
-// file 24 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\work\mss_c0_mss\mss_c0_mss.v "
-// file 25 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\actel\sgcore\osc\2.0.101\osc_comps.v "
-// file 26 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\work\osc_c0\osc_c0_0\osc_c0_osc_c0_0_osc.v "
-// file 27 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\work\osc_c0\osc_c0.v "
-// file 28 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\component\work\mss_c0\mss_c0.v "
+// file 5 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\actel\directcore\corespi\5.2.104\rtl\vlog\core\spi_clockmux.v "
+// file 6 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\actel\directcore\corespi\5.2.104\rtl\vlog\core\spi_chanctrl.v "
+// file 7 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\actel\directcore\corespi\5.2.104\rtl\vlog\core\spi_fifo.v "
+// file 8 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\actel\directcore\corespi\5.2.104\rtl\vlog\core\spi_rf.v "
+// file 9 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\actel\directcore\corespi\5.2.104\rtl\vlog\core\spi_control.v "
+// file 10 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\actel\directcore\corespi\5.2.104\rtl\vlog\core\spi.v "
+// file 11 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\actel\directcore\corespi\5.2.104\rtl\vlog\core\corespi.v "
+// file 12 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\work\corespi_c0\corespi_c0.v "
+// file 13 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\work\corespi_c1\corespi_c1.v "
+// file 14 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\actel\directcore\coreapb3\4.1.100\rtl\vlog\core\coreapb3_muxptob3.v "
+// file 15 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\actel\directcore\coreapb3\4.1.100\rtl\vlog\core\coreapb3_iaddr_reg.v "
+// file 16 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\actel\directcore\coreapb3\4.1.100\rtl\vlog\core\coreapb3.v "
+// file 17 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\work\coreapb3_c0\coreapb3_c0.v "
+// file 18 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\actel\directcore\coreresetp\7.1.100\rtl\vlog\core\coreresetp_pcie_hotreset.v "
+// file 19 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\actel\directcore\coreresetp\7.1.100\rtl\vlog\core\coreresetp.v "
+// file 20 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\work\coreresetp_c0\coreresetp_c0.v "
+// file 21 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\work\fccc_c0\fccc_c0_0\fccc_c0_fccc_c0_0_fccc.v "
+// file 22 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\work\fccc_c0\fccc_c0.v "
+// file 23 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\work\mss_c0_mss\mss_c0_mss_syn.v "
+// file 24 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\work\mss_c0_mss\mss_c0_mss.v "
+// file 25 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\actel\sgcore\osc\2.0.101\osc_comps.v "
+// file 26 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\work\osc_c0\osc_c0_0\osc_c0_osc_c0_0_osc.v "
+// file 27 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\work\osc_c0\osc_c0.v "
+// file 28 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\component\work\mss_c0\mss_c0.v "
 // file 29 "\c:\microsemi\libero_soc_v12.1\synplifypro\lib\nlconst.dat "
-// file 30 "\c:\users\files\mbsat\working\manitobasat-flight-software\mbsat-fsw-libero\designer\mss_c0\synthesis.fdc "
+// file 30 "\c:\users\files\iris\working\manitobasat-flight-software\iris-fsw-libero\designer\mss_c0\synthesis.fdc "
 
 `timescale 100 ps/100 ps
 module COREAPB3_MUXPTOB3 (
