--- a/mbsat-fsw-libero/synthesis/synlog/report/MSS_C0_fpga_mapper_runstatus.xml
+++ b/mbsat-fsw-libero/synthesis/synlog/report/MSS_C0_fpga_mapper_runstatus.xml
@@ -5,7 +5,7 @@ The file contains the job information from mapper to be displayed as part of the
 *******************************************************************************************-->
 <job_run_status name="Mapper">
 <report_link name="Detailed report">
-<data>C:\Users\Files\MBSAT\working\IrisSat-Flight-Software\mbsat-fsw-libero\synthesis\synlog\MSS_C0_fpga_mapper.srr</data>
+<data>C:\Users\Files\MBSAT\working\IrisSat-Flight-Software\iris-fsw-libero\synthesis\synlog\MSS_C0_fpga_mapper.srr</data>
 <title></title>
 </report_link>
 <job_status>
@@ -15,19 +15,19 @@ The file contains the job information from mapper to be displayed as part of the
 <info name="Notes">
 <data>35</data>
 <report_link name="more">
-<data>C:\Users\Files\MBSAT\working\IrisSat-Flight-Software\mbsat-fsw-libero\synthesis\synlog\report\MSS_C0_fpga_mapper_notes.txt</data>
+<data>C:\Users\Files\MBSAT\working\IrisSat-Flight-Software\iris-fsw-libero\synthesis\synlog\report\MSS_C0_fpga_mapper_notes.txt</data>
 </report_link>
 </info>
 <info name="Warnings">
 <data>28</data>
 <report_link name="more">
-<data>C:\Users\Files\MBSAT\working\IrisSat-Flight-Software\mbsat-fsw-libero\synthesis\synlog\report\MSS_C0_fpga_mapper_warnings.txt</data>
+<data>C:\Users\Files\MBSAT\working\IrisSat-Flight-Software\iris-fsw-libero\synthesis\synlog\report\MSS_C0_fpga_mapper_warnings.txt</data>
 </report_link>
 </info>
 <info name="Errors">
 <data>0</data>
 <report_link name="more">
-<data>C:\Users\Files\MBSAT\working\IrisSat-Flight-Software\mbsat-fsw-libero\synthesis\synlog\report\MSS_C0_fpga_mapper_errors.txt</data>
+<data>C:\Users\Files\MBSAT\working\IrisSat-Flight-Software\iris-fsw-libero\synthesis\synlog\report\MSS_C0_fpga_mapper_errors.txt</data>
 </report_link>
 </info>
 <info name="CPU Time">
